# densityratios

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
density_ratios/: __init__.py  augmentation.py  lgbm.py  logging.py  objectives.py  train.py
density_ratios/kernel/: kde.py  kliep.py  lsif.py  model.py  train.py  ulsif.py
density_ratios/nnet/: __init__.py  model.py  samplers.py
paper/: README.md  simulations.py
paper/models/: binary.yaml  shift.yaml  stabilized_weights_empirical.yaml  stabilized_weights_mc.yaml  stabilized_weights_mc_derange.yaml  stabilized_weights_mc_shuffle.yaml  stabilized_weights_quantile.yaml
tests/: test_package.py
